# pr-guard-bot

./: .gitignore  .ouroboros_eval_artifact.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  SEED.md  SEED.yaml  completed.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pr-guard.yml
.ouroboros/: mechanical.toml
adapter/: README.md
adapter/examples/: code_fix.request.json  seed_fix.request.json
adapter/pr_guard_adapter/: __init__.py  app.py  core.py  models.py  validators.py
adapter/scripts/: smoke.sh
adapter/tests/: test_app_config.py  test_service.py  test_validators.py
docs/operations/: adoption-log.md  evaluate-readiness-2026-05-29.md  pr-guard-required-check.md
docs/plans/: drift-false-positive-remediation.md  hermes-pr-guard-gate.md  hermes-webhook-adapter.md  review-mode.md
docs/smoke/: pr-guard-fixed-ingress.md
src/pr_guard/: __init__.py  branch.py  comment_format.py  commit.py  detector.py  diff_extractor.py  drift.py  drift_classifier.py  fix_pr.py  github_client.py  guard_report.py  llm_provider.py  main.py  onboarding_orchestrator.py  onboarding_pr.py  oracle_l1_report.py  patcher.py  publish.py  pull_request.py  review.py  signature.py  slack_format.py  slack_notify.py  spec_matcher.py  spec_parser.py  webhook.py
tests/: test_adapter_validators.py  test_branch.py  test_comment_format.py  test_commit.py  test_detector.py  test_diff_extractor.py  test_drift.py  test_drift_classifier.py  test_e2e_latency.py  test_fix_pr.py  test_github_client.py  test_guard_report.py  test_llm_provider.py  test_main_cli_gate.py  test_octokit_adapter.py  test_onboarding_orchestrator.py  test_onboarding_pr.py  test_oracle_l1_report.py  test_patcher.py  test_publish.py  test_pull_request.py  test_review.py  test_semantic_blocking_eval.py  test_signature.py  test_slack_format.py  test_slack_notify.py  test_spec_matcher.py  test_spec_parser.py  test_webhook.py  test_workflow_public_safety.py
tools/: replay_pr_guard_history.py
