[project]
name = "pr-guard"
version = "0.1.0"
description = "Personal Ouroboros GitHub adapter — PR-level intent vs implementation drift detector"
requires-python = ">=3.12"
authors = [{ name = "darbykim" }]
license = { text = "Proprietary (personal use only)" }
readme = "README.md"

# 현재 AC[1] 범위에서 실제로 import 되는 것만 포함.
# 나머지(ouroboros-ai, claude-agent-sdk, pyyaml, PyGithub)는
# 봇 본체(evaluate_drift, fix-PR 생성, PRD/SEED 파싱)가 완성될 때
# 해당 PR에서 추가한다 — install 시점에 미사용 deps로 무게 늘리지 않기 위함.
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
pr-guard = "pr_guard.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_guard"]

[tool.ruff]
line-length = 100
target-version = "py312"
