[project]
name = "pr-guard"
version = "0.1.0"
description = "Personal Ouroboros GitHub adapter — PR-level intent vs implementation drift detector"
requires-python = ">=3.12"
authors = [{ name = "darbykim" }]
license = { text = "Proprietary (personal use only)" }
readme = "README.md"

dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
pr-guard = "pr_guard.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_guard"]

[tool.ruff]
line-length = 100
target-version = "py312"
