[project]
name = "pr-guard"
version = "0.1.0"
description = "PR-level intent vs implementation drift detector for AI-generated code"
requires-python = ">=3.12"
authors = [{ name = "darbykim" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.40",
]
adapter = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8",
]

[project.scripts]
pr-guard = "pr_guard.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_guard", "adapter/pr_guard_adapter"]

[tool.ruff]
line-length = 100
target-version = "py312"
